fixes icons, grids projects page

--- a/projects.html
+++ b/projects.html
@@ -24,22 +24,26 @@
     </div>
   </div>
 
-  <!-- tracy added this -->
-    <!-- Projects-->
-    <section class="projects">
-      <div class="container grid"> <!-- using grid instead of flexbox so that we can have something span multiple columns and/or rows -->
-        <div class="project">
-          <h1>Spooky Eyes</h1>
-          <p>This is a small but delightful little program for a web page in which two eyes follow the user's mouse movements in real time. The base code was written by MITxPro staff, and completed by me as an assignment for the <a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding-womens-cohort">PCCW</a> course.</p>
-        <div style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621151891?h=9b27d48bc4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="New Recording - 10/2/2021, 8:37:03 PM"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<!-- tracy added this -->
+  <!-- Projects-->
+  <section class="projects">
+    <div class="container grid"> <!-- using grid instead of flexbox so that we can have something span multiple columns and/or rows -->
+      <div class="project">
+        <h1>Spooky Eyes</h1>
+        <p>This is a small but delightful little program for a web page in which two eyes follow the user's mouse movements in real time. The base code was written by MITxPro staff, and completed by me as an assignment for the <a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding-womens-cohort">PCCW</a> course.</p>
       </div>
-    </div>
-
+      <div class="video" style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621151891?h=9b27d48bc4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="New Recording - 10/2/2021, 8:37:03 PM"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      <div class="video" style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621216213?h=d154731eac&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Bus Tracker"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <div class="project">
         <h1>Bus Tracker</h1>
         <p>stuff about the bus tracker</p>
-        <div style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621216213?h=d154731eac&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Bus Tracker"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </div>
+      <div class="project">
+        <h1>Pacman Generator</h1>
+        <p>pacman pacman pacman nom nom nom</p>
+      </div>
+      <div class="video" style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621151891?h=9b27d48bc4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="New Recording - 10/2/2021, 8:37:03 PM"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    </div>
 
     </section>
 
