--- a/index.html
+++ b/index.html
@@ -58,6 +58,160 @@
     </div> 
   </section>
 
+  <section class="languages">
+    <h2 class="md text-center my-2">
+      Check out all my new toys!
+    </h2>
+    <div class="container flex">
+      <div class="card">
+        <h4>HTML5</h4>
+        <img class="langlogo" src="random-images/icons8-html-5.svg" alt="">
+      </div>
+      <div class="card">
+        <h4>CSS</h4>
+        <img class="langlogo" src="random-images/icons8-css3.svg" alt="">
+      </div>
+      <div class="card">
+        <h4>JavaScript</h4>
+        <img class="langlogo" src="random-images/icons8-javascript.svg" alt="">
+      </div>
+      <div class="card">
+        <h4>Mongo DB</h4>
+        <img class="langlogo" src="/random-images/mongodb.svg" alt="">
+      </div>
+      <div class="card">
+        <h4>React</h4>
+        <img class="langlogo" src="/random-images/icons8-react-native.svg" alt="">
+      </div>
+      <div class="card">
+        <h4>Node.js</h4>
+        <img class="langlogo" src="/random-images/nodejs-icon.svg" alt="">
+      </div>
+    </div>
+  </section>
+
+
+
+  <!-- Cli --><!--
+  <section class="cli">
+    <div class="container grid">
+      <img src="random-images/cat-transparent.png" alt="">
+      <div class="card">
+        <h3>Easy to use, cross-platform CLI</h3>
+      </div>
+      <div class="card">
+        <h3>Deploy in seconds</h3>
+      </div>
+    </div>
+  </section>
+-->
+  <!-- Cloud -->
+  <section class="cloud bg-primary my-2 py-2">
+    <div class="container grid"> 
+      <div class="text-center">
+        <h2 class="lg">oh btw, I made some stuff</h2> <!-- making sizing classes (in this case, large) -->
+        <p class="lead my-1">click for examples of my work so far</p>
+        <a href="projects.html" class="btn btn-dark">Projects</a>
+      </div>
+      <img src=images/cloud.png alt=""> <!-- we have a container with a grid , so the div is the first item on the grid and the image is the second item-->
+    </div>
+  </section>
+
+
+
+  <!-- Footer -->
+  <footer class="footer bg-dark py-5">
+    <div class="container grid grid-3">
+      <div>
+        <h1>Tracy Breen
+        </h1>
+        <p>Copyright &copy; 2021</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="history.html">History</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="wombat.html">Procrastination</a></li>
+        </ul>
+      </nav>
+      <div class="social">
+        <a href="https://github.com/tracybreen" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
+        <a href="https://www.linkedin.com/in/tracy-breen/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://twitter.com/iamtracybreen" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- this is for the font aawesome fonts-->
+  <link rel="stylesheet" href="styles.css">
+  <title>Tracy Breen | Web Developer</title>
+</head>
+<body>
+  <!-- Navbar -->
+  <div class="navbar"> <!-- will hold logo (h1) and menu)-->
+    <div class="container flex"> <!-- we wrap in a container so that on large screens the logo will stop growing along with it at a certain point--> <!-- the "utility class" of flex makes everything inside this container flexbox items-->
+      <h1 class="logo">Tracy Breen</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="history.html">History</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="wombat.html">Procrastination</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+
+  <!-- Showcase -->
+  <section class="showcase">
+    <div class="container grid"><!-- this adds BOTH classes and even if we have different areas with grids we could specifically edit the showcase grid for example -->
+      <div class="showcase-text">
+        <h1>Developer-in-Training</h1>
+        <p>Currently a student in MIT's Full Stack Web Developer Certificate Program, I'm a highly adaptable, customer service-oriented team-player with heaps of determination, an innate love of learning, and a strong drive to succeed.</p>
+        <a href="history.html" class="btn btn-outline">Bio</a>
+      </div>
+      <div class="showcase-pic">
+        <img class="radiusten" src="random-images/tracy-biopic-square.jpg" alt="">
+      </div>
+<!--
+      <div class="showcase-form card">
+        <h2>Request a Demo</h2>
+        <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
+          <input type="hidden" name="form-name" value="contact">
+          <p class="hidden">
+            <label>Don't fill out this form if you're human: <input name="bot-field" /></label>
+          <div class="form-control">
+            <input type="text" name="name" placeholder="Name" required>
+          </div>
+          <div class="form-control">
+            <input type="text" name="company" placeholder="Company Name" required>
+          </div>
+          <div class="form-control">
+            <input type="email" name="email" placeholder="Email" required>
+          </div>
+          <input type="submit" class="btn btn-primary">
+        </form>
+      </div>
+    -->
+    </div> 
+  </section>
+
   <!-- Stats -->
   <section class="stats">
     <div class="container">
