adds contact form, adjusts text in projects

--- a/history.html
+++ b/history.html
@@ -48,10 +48,38 @@
     <i class="fa-solid fa-rocket fa-3x"></i>
     <i class="fa-solid fa-person-hiking fa-3x"></i>
     <p>My professional life thus far has prepared me to be exceptionally adaptable, to respond swiftly and tactfully to client concerns, and to work comfortably in all sorts of team settings. My professional life going forward… well, that’s a narrative journey upon which I’m very excited to embark.</p>
-    <p>For examples of my work so far, please visit the projects page or click my GitHub link. And stay tuned, because I’m hungry to tackle bigger and more challenging projects as my knowledge base grows broader and stronger.</p>
+    <p>For examples of my work so far, please visit the projects page or click my GitHub link below. I'd love to hear from you on LinkedIn or Twitter! And stay tuned, because I’m hungry to tackle bigger and more challenging projects as my knowledge base grows broader and stronger.</p>
     <i class="fa-solid fa-chart-line fa-3x"></i><br>
   </div>
 </section>
+<section class="contact-card">
+    <div class="contact-form card">
+      <h2>Contact Me</h2>
+      <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
+        <input type="hidden" name="form-name" value="contact">
+        <p class="hidden">
+          <label>Don't fill out this form if you're human: <input name="bot-field" /></label>
+        <div class="form-control">
+          <input type="text" name="name" placeholder="Name" required>
+        </div>
+        <div class="form-control">
+          <input type="text" name="company" placeholder="Company Name" required>
+        </div>
+        <div class="form-control">
+          <input type="email" name="email" placeholder="Email" required>
+        </div>
+        <div class="form-control">
+          <input type="text" name="message" placeholder="What can I do for you?" required>
+        </div>
+        <input type="submit" class="btn btn-primary">
+      </form>
+    </div>
+  </section>
+
+
+
+
+
 
 
   <!-- Footer -->
