updates pages, unlinks procrastination

--- a/history.html
+++ b/history.html
@@ -18,7 +18,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="history.html">History</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="wombat.html">Procrastination</a></li>
         </ul>
       </nav>
     </div>
@@ -48,17 +47,16 @@
     <i class="fa-solid fa-rocket fa-3x"></i>
     <i class="fa-solid fa-person-hiking fa-3x"></i>
     <p>My professional life thus far has prepared me to be exceptionally adaptable, to respond swiftly and tactfully to client concerns, and to work comfortably in all sorts of team settings. My professional life going forward… well, that’s a narrative journey upon which I’m very excited to embark.</p>
-    <p>For examples of my work so far, please visit the projects page or click my GitHub link below. I'd love to hear from you on LinkedIn or Twitter! And stay tuned, because I’m hungry to tackle bigger and more challenging projects as my knowledge base grows broader and stronger.</p>
+    <p>For examples of my work so far, you can visit the projects section here or follow the kitty logo at the bottom of the page to my GitHub profile. Please feel free to contact me using the wombat form or reach out via LinkedIn or Twitter! And stay tuned, because I’m hungry to tackle bigger and more challenging projects as my knowledge base grows broader and stronger.</p>
     <i class="fa-solid fa-chart-line fa-3x"></i><br>
   </div>
 </section>
 <section class="contact-card">
     <div class="contact-form card">
-      <h2>Contact Me</h2>
-      <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
-        <input type="hidden" name="form-name" value="contact">
-        <p class="hidden">
-          <label>Don't fill out this form if you're human: <input name="bot-field" /></label>
+      <h2 class="center">Contact me & let's do lunch!</h2><img class="lilguy" src="random-images/wombat.png">
+      <form name="contact" action="https://formspree.io/f/xrgrdyda"
+      method="POST">
+      <input type="hidden" name="_subject" value="Contact request from personal website" />
         <div class="form-control">
           <input type="text" name="name" placeholder="Name" required>
         </div>
@@ -66,12 +64,13 @@
           <input type="text" name="company" placeholder="Company Name" required>
         </div>
         <div class="form-control">
-          <input type="email" name="email" placeholder="Email" required>
+          <input type="email" name="_replyto" placeholder="Email" required>
         </div>
         <div class="form-control">
+          <!--<textarea name="message" placeholder="What can I do for you?" required></textarea>-->
           <input type="text" name="message" placeholder="What can I do for you?" required>
         </div>
-        <input type="submit" class="btn btn-primary">
+        <input type="submit" class="btn btn-primary center">
       </form>
     </div>
   </section>
@@ -95,7 +94,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="history.html">History</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="wombat.html">Procrastination</a></li>
         </ul>
       </nav>
       <div class="social">
