--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="history.html">History</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="wombat.html">Procrastination</a></li>
         </ul>
       </nav>
     </div>
@@ -30,17 +29,17 @@
     <div class="container grid"> <!-- using grid instead of flexbox so that we can have something span multiple columns and/or rows -->
       <div class="project">
         <h1 class="darker">Spooky Eyes</h1>
-        <p class="darker">This is a small but delightful little program for a web page in which two eyes follow the user's mouse movements in real time. The base code was written by MITxPro staff, and completed by me as an assignment for the <a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding-womens-cohort">PCCW</a> course.</p>
+        <p class="darker">This is a small but delightful little program for a web page in which two eyes follow the user's mouse movements in real time.</p><a href="https://github.com/tracybreen/spooky-eyes" class="btn btn-repo">GitHub Repo</a>
       </div>
       <div class="video" style="padding:49.58% 0 0 0;position:relative;"><iframe width="560" height="315" src="https://player.vimeo.com/video/621151891?h=9b27d48bc4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="New Recording - 10/2/2021, 8:37:03 PM"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <div class="video" style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621216213?h=d154731eac&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Bus Tracker"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <div class="project">
         <h1 class="darker">Bus Tracker</h1>
-        <p class="darker">stuff about the bus tracker</p>
+        <p class="darker">stuff about the bus tracker Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, recusandae. Ducimus perspiciatis iusto expedita excepturi omnis. Error assumenda in illo!</p><a href="https://github.com/tracybreen/bus-tracker" class="btn btn-repo">GitHub Repo</a>
       </div>
       <div class="project">
         <h1 class="darker">Pacman Generator</h1>
-        <p class="darker">pacman pacman pacman nom nom nom</p>
+        <p class="darker">pacman pacman pacman nom nom nom</p><a href="history.html" class="btn btn-repo">GitHub Repo</a>
       </div>
       <div class="video" style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621151891?h=9b27d48bc4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="New Recording - 10/2/2021, 8:37:03 PM"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     </div>
@@ -60,7 +59,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="history.html">History</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="wombat.html">Procrastination</a></li>
           </ul>
         </nav>
         <div class="social">
