fixes project alignment on small screens

--- a/projects.html
+++ b/projects.html
@@ -28,17 +28,17 @@
     <div class="container grid">
       <div class="project">
         <h1 class="darker">Spooky Eyes</h1>
-        <p class="darker">This is a small but delightful little program for a web page in which two eyes follow the user's mouse movements in real time.</p><a href="https://github.com/tracybreen/spooky-eyes" class="btn btn-repo">GitHub Repo</a>
+        <p class="darker">This is a small but delightful little program for a web page in which two eyes follow the user's mouse movements in real time.</p><div class="repo-btn"><a href="https://github.com/tracybreen/spooky-eyes" class="btn btn-repo">GitHub Repo</a></div>
       </div>
       <div class="video" style="padding:49.58% 0 0 0;position:relative;"><iframe width="560" height="315" src="https://player.vimeo.com/video/621151891?h=9b27d48bc4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="New Recording - 10/2/2021, 8:37:03 PM"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-        <div class="video" style="padding:58.44% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/624335759?h=df343552f8&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="PacMen Factory"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-        <div class="project">
-        <h1 class="darker">PacMen Factory</h1>
-        <p class="darker">This program utilizes JavaScript and HTML to allow the user to fill a screen with little PacMen, bouncing around at various speeds.</p><a href="https://github.com/tracybreen/pacmen-factory" class="btn btn-repo">GitHub Repo</a>
+      <div class="project bg-2">
+        <h1 class="darker bg-2">PacMen Factory</h1>
+        <p class="darker bg-2">This program utilizes JavaScript and HTML to allow the user to fill a screen with little PacMen, bouncing around at various speeds.</p><div class="repo-btn"><a href="https://github.com/tracybreen/pacmen-factory" class="btn btn-repo">GitHub Repo</a></div>
       </div>
+      <div class="video bg-2" style="padding:58.44% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/624335759?h=df343552f8&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="PacMen Factory"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <div class="project">
         <h1 class="darker">Bus Tracker</h1>
-        <p class="darker">This Mapbox-based program moves a location marker along the bus stops between the MIT and Harvard campuses.</p><a href="https://github.com/tracybreen/bus-tracker" class="btn btn-repo">GitHub Repo</a>
+        <p class="darker">This Mapbox-based program moves a location marker along the bus stops between the MIT and Harvard campuses.</p><div class="repo-btn"><a href="https://github.com/tracybreen/bus-tracker" class="btn btn-repo">GitHub Repo</a></div>
       </div>
       <div class="video" style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621216213?h=d154731eac&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Bus Tracker"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     </div>
