fixes form and wombat

--- a/history.html
+++ b/history.html
@@ -52,8 +52,9 @@
   </div>
 </section>
 <section class="contact-card">
+  <div class="container flex">
     <div class="contact-form card">
-      <h2 class="center">Contact me & let's do lunch!</h2><img class="lilguy" src="random-images/wombat.png">
+      <h2 class="center">Contact me<br>&<br>let's do lunch!</h2>
       <form name="contact" action="https://formspree.io/f/xrgrdyda"
       method="POST">
       <input type="hidden" name="_subject" value="Contact request from personal website" />
@@ -70,9 +71,10 @@
           <!--<textarea name="message" placeholder="What can I do for you?" required></textarea>-->
           <input type="text" name="message" placeholder="What can I do for you?" required>
         </div>
-        <input type="submit" class="btn btn-primary center">
+        <div class="center"><input type="submit" class="btn btn-primary center"></div>
       </form>
     </div>
+    <div><img class="lilguy" src="random-images/wombat.png"></div>
   </section>
 
 
