--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
   <!-- NAvbar -->
   <div class="navbar"> <!-- will hold logo (h1) and menu)-->
     <div class="container flex"> <!-- we wrap in a container so that on large screens the logo will stop growing along with it at a certain point--> <!-- the "utility class" of flex makes everything inside this container flexbox items-->
-      <h1 class="logo">Tracy Breen | Projects</h1>
+      <h1 class="logo">Tracy Breen</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
