adds creative icon to index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <p class="lead my-1">click for examples of my work so far</p>
         <a href="projects.html" class="btn btn-dark">Projects</a>
       </div>
-      <img src=images/cloud.png alt=""> <!-- we have a container with a grid , so the div is the first item on the grid and the image is the second item-->
+      <div class="quickpad"><img src="random-images/creative-clip.png" alt=""></div><!-- we have a container with a grid , so the div is the first item on the grid and the image is the second item-->
     </div>
   </section>
 
